# oauth2_fast

./: .gitignore  Oauth2_backend.md  README.md  pyproject.toml
app/api/: entry.py  service.py
app/logs/: log_config.yaml  log_setup.py
app/tests/: test_logging.py  test_start.py
