[tool.poetry]
name = "oauth-python"
version = "0.1.0"
description = ""
authors = ["it-AVNG <it.avng@gmail.com>"]
readme = "README.md"
packages = [{include = "oauth_python"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
httpx = "^0.27.0"
fastapi = {extras = ["standard"], version = "^0.112.1"}
pyyaml = "^6.0.2"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
